--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><p1>Hello World</p1>
+<body>
+    <script src="index.js"></script>
+    <p1>Hello World</p1>
     
 </body>
 </html>
